# interactive-game-agent

./: .env  .gitignore  LICENSE  langgraph.json  main.py  pyproject.toml
.github/: CITATION.cff  SUPPORT.md
notebooks/: simple_agent.ipynb
src/: __init__.py
src/core/: __init__.py
src/core/agents/: __init__.py  agent.py  client.py  local.py
src/core/agents/simple/: __init__.py
src/core/builders/: __init__.py  builder.py
src/core/builders/simple/: __init__.py
src/core/constants/simple/: __init__.py
src/core/graph/: base.py  graph.py
src/core/graphs/: __init__.py  base.py  graph.py
src/core/graphs/simple/: __init__.py
src/core/nodes/: __init__.py  node.py
src/core/nodes/simple/: __init__.py  entry.py  glad.py  mood_router.py  persona.py  sad.py
src/core/schemas/simple/: __init__.py
src/core/types/: __init__.py
