[project]
name = "interactive-game-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=2.0.1",
    "fastapi>=0.133.0",
    "langgraph>=1.0.9",
    "langsmith>=0.7.6",
    "motor>=3.7.1",
    "uvicorn>=0.41.0",
]
